# meta-bun

./: .biomeignore  .gitignore  .npmignore  BRIDGE_TODOS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  TODO_BRIDGE.md  biome.json  package.json  test-dashboard.ts  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml
configs/admins/: chat_colors.json  groups.json  list.json  presets.json
configs/core/: database.json  discord_permissions.json  reserved_slots.json  settings.json
docs/: ADMIN_GUIDE.md  api-reference.md  architecture.md  plugin-development-guide.md
docs/metamod/: Admin-Interface.md  Configuring-Metamod:Source.md  FAQ.md  GameInfo-Deprecation.md  Installing-Metamod.md  Motd.md  Open-Source-Plugins-For-Metamod.md  Source-Development.md  Source-Environment.md  SourceHook-Development.md  SourceHook-Standalone.md  SourceHook.md  Supported-Games.md  Using-Metamod-On-Listen-Servers.md
docs/plans/: 2026-06-04-architecture-refactor-design.md  2026-06-09-bridge-commands-actions-design.md  2026-06-09-bridge-core.md  2026-06-09-roadmap-execution.md  2026-06-10-css-command-system-design.md  2026-06-10-css-command-system-implementation.md  2026-06-10-css-features-integration-design.md  2026-06-10-message-middleware-pipeline-design.md  2026-06-10-secure-admin-dashboard-design.md  2026-06-11-single-threaded-bridge-migration.md  css-features-implementation-plan.md  mega-suite-implementation-plan.md  message-pipeline-implementation-plan.md  secure-dashboard-implementation-plan.md
metamod-plugin/: CMakeLists.txt
metamod-plugin/src/: plugin.cpp  plugin.h
plugins/admin-menu/: index.ts  package.json
plugins/surf-hp-reward/: index.ts  package.json
plugins/test-commands/: index.ts  package.json
scripts/: build.ts  create_plugin_cli.ts  generate_schema.ts  install_server.ts  publish_npm.ts  release.ts  update.ts  update_geoip.ts  update_geoip_global.ts
src/cpp/: .clang-format  CMakeLists.txt  build.sh  plugin.cpp  plugin.h
src/cpp/convars/: convar_manager.cpp  convar_manager.h
src/cpp/core/: metabun_plugin.cpp  metabun_plugin.h  schema_manager.cpp  schema_manager.h  sdk_mock.h
src/cpp/events/: event_manager.cpp  event_manager.h
src/cpp/hooks/: sdk_hooks.cpp  sdk_hooks.h
src/cpp/menus/: menu_handler.cpp  menu_handler.h
src/cpp/network/: bridge_client.cpp  bridge_client.h  rcon_client.cpp  rcon_client.h
src/cpp/players/: player_stats.cpp  player_stats.h
src/cpp/process/: process_manager.cpp  process_manager.h
src/cpp/utils/: color_utils.h  json_helper.h
src/ts/: index.ts  natives.ts
src/ts/addons/ai/: navmesh.ts  pathfinder.worker.ts
src/ts/addons/dashboard/: server.ts
src/ts/addons/dashboard/public/: index.html
src/ts/addons/gateway/: websocket.ts
src/ts/addons/updater/: service.ts
src/ts/admins/: bans.ts  manager.ts
src/ts/mock/: bridge.ts
src/ts/natives/: bots.ts  console.ts  core.ts  entities.ts  events.ts  index.ts  menus.ts  player.ts  timers.ts
src/ts/network/: bridge.ts
src/ts/players/: manager.ts  player.ts
src/ts/plugin-system/: context.ts  convar.ts  cookie.ts  manager.ts  menu.test.ts  menu.ts  pipeline.ts
src/ts/shared/: colors.ts  context-store.ts  database.ts  decorators.ts  discord.ts  errors.ts  filter.ts  geoip.ts  plugin.ts  task.ts  translations.ts  utils.ts
src/ts/shared/types/: admin.ts  ast.ts  bridge.ts  enums.ts  events.ts  index.ts  message.ts  player.ts  plugin.ts  weapon.ts
src/ts/ui/: CenterHtmlMenu.ts
test/: setup.ts
test/helpers/: integration-setup.ts  mock-cpp-client.ts  test-utils.ts
test/integration/: advanced-features.test.ts  bridge.test.ts  commands.test.ts  cpp-command-event.test.ts  cpp-side-event.test.ts  database.test.ts  generic-event.test.ts  plugin-lifecycle.test.ts  test_cpp_client  test_cpp_client.cpp  ultimate-system.test.ts  unsupported-sourcemod-features.test.ts
test/unit/: admin.test.ts  filter.test.ts  generated-schema.test.ts  menu.test.ts  navmesh.test.ts  pipeline.test.ts  player.test.ts  plugin-context-pipeline-refactor.test.ts  plugin-context-pipeline.test.ts  plugin-context.test.ts  target-filters.test.ts  translations.test.ts
test/unit/ui/: CenterHtmlMenu.test.ts
translations/: en.json  tr.json
